--- a/python/rag_web_ollama_faiss.ipynb
+++ b/python/rag_web_ollama_faiss.ipynb
@@ -78,7 +78,7 @@
     "chrome_options.add_argument('--headless')\n",
     "chrome_options.add_argument('--disable-gpu')\n",
     "chrome_options.add_argument('--no-sandbox')\n",
-    "chrome_options.add_argument('--disable-dev-shm-usage')\n",
+    "chrome_options.add_argument('--enable-javascript')\n",
     "\n",
     "service = Service()\n",
     "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
